# SmartHome

./: .gitignore
cppAPP/: CMakeLists.txt  main.cpp
cppAPP/src/clientHandler/: clientHandler.cpp  clientHandler.hpp  httpGetHandle.cpp  httpGetHandle.hpp
cppAPP/src/deviceManager/: Idevice.hpp  airConditioner.cpp  airConditioner.hpp  deviceManager.cpp  deviceManager.hpp  led.cpp  led.hpp
cppAPP/src/parser/: parser.cpp  parser.hpp
cppAPP/src/serviceManager/: serviceManager.cpp  serviceManager.hpp
linuxModules/gpioDriver/: Makefile  gpio-file-operations.c  gpio.c
mernAPP/ExpressJS_server/: .gitignore  package-lock.json  package.json  server.js
mernAPP/ExpressJS_server/models/: DevicesInfo.js
mernAPP/webpage/: package-lock.json  package.json
mernAPP/webpage/src/: App.css  App.js
mernAPP/webpage/src/components/: Background.css  Background.js  DeviceForm.css  DeviceForm.js  DeviceTag.css  DeviceTag.js  Header.css  Header.js
yoctoImage/conf/: .bblayers.conf.swp  bblayers.conf  local.conf
yoctoImage/meta-smarthome/conf/: layer.conf
yoctoImage/meta-smarthome/recipes-application/config-startup-sv/: configstartup-sv.bb
yoctoImage/meta-smarthome/recipes-application/device-controller/: device-controller.bb
yoctoImage/meta-smarthome/recipes-core/images/: smarthome-image.bb
yoctoImage/meta-smarthome/recipes-frontend/frontend/: frontend_0.1.0.bb
yoctoImage/meta-smarthome/recipes-httpd/nginx/: nginx_%.bbappend
yoctoImage/meta-smarthome/recipes-httpd/nginx/files/: default-server  (+1 more)
yoctoImage/meta-smarthome/recipes-kernel/gpio-mod/: gpio-mod.bb
(+4 files in other folders)
